<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EventChat</string>
    <string name="join">Join</string>
    <string name="my_events">My Events</string>
    <string name="chat">Chat</string>
    <string name="me">Me</string>
    <string name="action_settings">Settings</string>
    <string name="avatar">Avatar</string>
    <string name="post">Post</string>
    <string name="my_post">My Post</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="like">Like</string>
    <string name="user_name_hint">Please enter user name</string>
    <string name="password_hint">Please enter password</string>
    <string name="login">Login</string>
    <string name="join_hint">Tap the secret pattern to join the event.</string>
    <string name="friend">Friend</string>
    <string name="chat_all">Chat with All Attendees</string>
    <string name="desc">This is a brief introduction about myself</string>
    <string name="add_friend">Add Friend</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="friends">Friends</string>
    <string name="xiaolei">xiaolei@test.com</string>
    <string name="password">xiaolei</string>
    <string name="attended">Attended</string>
    <string name="organized">Organized</string>
    <string name="_6">6</string>
    <string name="location">Location:</string>
    <string name="time">Time:</string>
    <string name="organizer">Organizer:</string>
    <string name="chat_message_hint">Type something here...</string>
    <string name="send">Send</string>
    <string name="compose">Compose</string>
    <string name="cancel">Cancel</string>
    <string name="post_title">New Post</string>
    <string name="post_type">text</string>
    <string name="hosted_by">Hosted by</string>
    <string name="more">+</string>

</resources>