<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/user_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:hint="@string/user_name_hint"
        android:inputType="text"
        android:text="@string/xiaolei" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:text="@string/password" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_selector"
        android:text="@string/login"
        android:textColor="@android:color/white" />

</LinearLayout>