<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/avatar"
        android:src="@drawable/placeholder" />

    <TextView
        android:id="@+id/autor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/avatar"
        android:text="@string/user_name_hint"
        android:textColor="@color/theme" />

    <TextView
        android:id="@+id/post_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/autor_name"
        android:layout_toRightOf="@id/avatar"
        android:text="@string/action_settings" />

    <TextView
        android:id="@+id/post_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_date"
        android:layout_toRightOf="@id/avatar"
        android:text="@string/join_hint" />

    <TextView
        android:id="@+id/post_comment_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:drawableTop="@drawable/ico_comment"
        android:text="@string/_6" />

    <TextView
        android:id="@+id/post_like_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/post_comment_num"
        android:drawableTop="@drawable/ico_like"
        android:text="@string/_6" />

    <TextView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_content"
        android:drawableLeft="@drawable/ico_like"
        android:text="@string/like" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_content"
        android:layout_toRightOf="@id/like"
        android:drawableLeft="@drawable/ico_comment"
        android:text="@string/comment" />

</RelativeLayout>