<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="240dp" >

        <ImageView
            android:id="@+id/event_background"
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/e1" />

        <TextView
            android:id="@+id/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/events"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingLeft="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hosted_by" />

            <TextView
                android:id="@+id/organizer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ico_location"
        android:drawablePadding="5dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ico_time"
        android:drawablePadding="5dp"
        android:paddingLeft="20dp"
        android:paddingTop="180dp"
        android:textSize="16sp" />

    <GridLayout
        android:id="@+id/attendee_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:rowCount="1" >
    </GridLayout>

    <ListView
        android:id="@+id/post_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>